# modrinth-api

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: autobot.yaml  ci.yaml  clippy.yaml
src/: lib.rs
src/version_files/: from_hash.rs  from_hashes.rs  mod.rs
src/versions/: create.rs  mod.rs
tests/fixtures/: version_from_hash.json  versions_from_hashes.json
