[package]
name = "modrinth-api"
version = "0.1.0"
authors = [
	"Seth <getchoo at tuta dot io>",
	"SkywardMC Contributors"
]
edition = "2021"
rust-version = "1.62"
description = "Structured bindings for Modrinth's API"
readme = "README.md"
repository = "https://github.com/skywardmc/modrinth-api"
license = "MPL-2.0"
keywords = ["minecraft", "modrinth", "api", "binding"]
categories = ["api-bindings"]
exclude = [
	"/.github",
	"/.gitignore",
	"**.nix",
	"flake.lock"
]

# TODO: publish :)
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[lints.clippy]
cargo = "warn"
complexity = "warn"
correctness = "deny"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "deny"

[lints.rust]
unsafe_code = "forbid"

[package.metadata.typos]
files.extend-exclude = ["tests/**"]
